--- a/.github/workflows/prb_windows.yml
+++ b/.github/workflows/prb_windows.yml
@@ -17,8 +17,11 @@ jobs:
         with:
           go-version: 1.17
 
-      - name: Test
-        run: go test -v -count=1 ./...
-
       - name: Install
         run: make install
+        
+      - name: Install1
+        run: ls
+        
+      - name: Install2
+        run: sail conn
