--- a/.github/workflows/prb_windows.yml
+++ b/.github/workflows/prb_windows.yml
@@ -24,4 +24,10 @@ jobs:
         run: ls
         
       - name: Install2
+        run: go build -o sail.exe
+        
+      - name: Install3
+        run: ls
+        
+      - name: Install4
         run: sail conn
