--- a/.github/workflows/prb_windows.yml
+++ b/.github/workflows/prb_windows.yml
@@ -16,9 +16,6 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
-
-      - name: Install
-        run: make install
         
       - name: Install1
         run: ls
@@ -30,4 +27,4 @@ jobs:
         run: ls
         
       - name: Install4
-        run: sail conn
+        run: sail.exe conn
