--- a/.github/workflows/prb_windows.yml
+++ b/.github/workflows/prb_windows.yml
@@ -17,9 +17,6 @@ jobs:
         with:
           go-version: 1.17
         
-      - name: Install1
-        run: ls
-        
       - name: Install2
         run: go build -o sail.exe
         
@@ -27,4 +24,16 @@ jobs:
         run: ls
         
       - name: Install4
-        run: ./sail.exe conn
+        run: ./sail.exe init connTest
+        
+      - name: Install5
+        run: ls
+        
+      - name: Install6
+        run: cd connTest
+        
+      - name: Install7
+        run: npm install
+        
+      - name: Install7
+        run: npm run pack-zip
