--- a/.github/workflows/prb_windows.yml
+++ b/.github/workflows/prb_windows.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  sailpoint-cli-windows:
+  sailpoint-cli-macos:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
